<resources>
    <string name="app_name">Calculator2</string>
    <string name="key_percent">%</string>
    <string name="key_multipl">×</string>
    <string name="key_divide">÷</string>
    <string name="key_delete">⌫</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_plus">+</string>
    <string name="key_6">6</string>
    <string name="key_minus">-</string>
    <string name="key_5">5</string>
    <string name="key_4">4</string>
    <string name="key_3">3</string>
    <string name="key_2">2</string>
    <string name="key_1">1</string>
    <string name="key_0">0</string>
    <string name="key_point">.</string>
    <string name="key_equals">=</string>
    <string name="settings">Settings</string>
    <string name="choose_theme">Choose theme:</string>
    <string name="blue_orangeade">Blue Orangeade</string>
    <string name="blue_and_grey"><![CDATA[Blue & Grey]]></string>
    <string name="back_button">←</string>
    <string name="button_settings">⚙</string>
</resources>