<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingTop="60dp"
    android:theme="@style/CalcButtons">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/edit_text"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|end"
        android:inputType="number"
        android:textColor="@color/white"
        android:textSize="@dimen/_40ssp"
        tools:text="33400" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:columnCount="4">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_percent"
            android:layout_marginEnd="16dp"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/key_percent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_multipl"
            android:layout_marginEnd="16dp"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/key_multipl" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_divide"
            android:layout_marginEnd="16dp"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/key_divide" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_delete"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/key_delete" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_7"
            android:layout_marginEnd="16dp"
            android:text="@string/key_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_8"
            android:layout_marginEnd="16dp"
            android:text="@string/key_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_9"
            android:layout_marginEnd="16dp"
            android:text="@string/key_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_plus"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/key_plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_6"
            android:layout_column="2"
            android:layout_marginEnd="16dp"
            android:text="@string/key_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_minus"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/key_minus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_5"
            android:layout_column="1"
            android:layout_marginEnd="16dp"
            android:text="@string/key_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_4"
            android:layout_column="0"
            android:layout_marginEnd="16dp"
            android:text="@string/key_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_3"
            android:layout_column="2"
            android:layout_marginEnd="16dp"
            android:text="@string/key_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_2"
            android:layout_column="1"
            android:layout_marginEnd="16dp"
            android:text="@string/key_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_1"
            android:layout_column="0"
            android:layout_marginEnd="16dp"
            android:text="@string/key_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_0"
            android:layout_columnSpan="2"
            android:layout_marginEnd="16dp"
            android:text="@string/key_0"
            android:textSize="@dimen/_20ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_point"
            android:layout_marginEnd="16dp"
            android:text="@string/key_point" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_equals"
            android:layout_row="3"
            android:layout_rowSpan="2"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/key_equals" />

    </GridLayout>

</LinearLayout>